<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="-3dp">

        <Spinner
            android:id="@+id/cmd_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_connect" />

        <Button
            android:id="@+id/btn_exec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_exec" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_disconnect" />

        <Button
            android:id="@+id/btnImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_load_img" />

        <Button
            android:id="@+id/btnPrintImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_print_img" />

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@color/colorPrimary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>